# TextOps

./: .gitignore
TextOps/: CMakeLists.txt  Jenkinsfile  build-release.sh  test_results.xml
TextOps/bench/: CMakeLists.txt  bench.cpp
TextOps/test/: CMakeLists.txt
TextOps/test/src/: main.cpp  test.cpp  test.hpp
TextOps/textops/: CMakeLists.txt
TextOps/textops/src/: Msg.hpp  Msg.tpp  helpers.hpp  textHandler.cpp  textHandler.hpp  textHandler.tpp
TextOps/textops_lib/: CMakeLists.txt
TextOps/textops_lib/include/: helpers.hpp
TextOps/textops_lib/src/: Msg.cpp
